# inventory-watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .ycm_extra_conf.py  CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/cli/: CMakeLists.txt  main.cpp
src/apps/cli/mac/: Info.plist  helper-Info.plist
src/apps/cli/mac/English.lproj/: MainMenu.xib
src/core/: CMakeLists.txt
src/core/core/: Config.cpp  Config.h  GTKPlatformUtils.cpp  MacPlatformUtils.mm  PlatformUtils.cpp  PlatformUtils.h  StringUtility.h
src/messenger/: CMakeLists.txt
src/messenger/messenger/: IMessenger.h  MessengerContainer.cpp  MessengerContainer.h
src/messenger/messenger/backend/: SMTPClient.cpp  SMTPClient.h
src/messenger/messenger/channels/: EmailMessenger.cpp  EmailMessenger.h  PhoneNumber.cpp  PhoneNumber.h  SMSMessenger.cpp  SMSMessenger.h
src/sentinel/: CMakeLists.txt
src/sentinel/sentinel/: ISentinel.h  ITrackItem.h  IVendor.h  IVendorFwd.h  Sentinel.cpp  Sentinel.h  StringUtility.h  TrackItem.cpp  TrackItem.h  VendorFactory.cpp  VendorFactory.h
src/sentinel/sentinel/backend/: Constants.cpp  Constants.h  HTMLParser.cpp  HTMLParser.h  HTTPBackend.cpp  HTTPBackend.h  HTTPInstance.cpp  HTTPInstance.h  MacHTTPBackend.h  MacHTTPBackend.mm  URI.cpp  URI.h
src/sentinel/sentinel/vendors/: NeweggTrackItem.cpp  NeweggTrackItem.h  NeweggVendor.cpp  NeweggVendor.h
