CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT("inventory-watcher")

SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "rd")

SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")

# For YCM
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Dependencies
FIND_PACKAGE(Boost 1.70
             COMPONENTS program_options
             REQUIRED)
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(openssl REQUIRED)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(Gumbo REQUIRED IMPORTED_TARGET gumbo)

ADD_SUBDIRECTORY("src")
