SET(ADDITIONAL_SRCS "")

IF(APPLE)
    SET(ADDITIONAL_SRCS ${ADDITIONAL_SRCS} core/MacPlatformUtils.mm)
ENDIF()

ADD_LIBRARY(core SHARED
    core/Config.cpp
    core/PlatformUtils.cpp
    ${ADDITIONAL_SRCS})

TARGET_INCLUDE_DIRECTORIES(core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(core
    ${Boost_LIBRARIES})
IF(APPLE)
    TARGET_LINK_LIBRARIES(core ${COCOA_LIBRARY})
ENDIF()

INSTALL(TARGETS core
        LIBRARY DESTINATION lib)
